--- a/projeto_final/fabio_mazza/projeto_final_modulos12.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulos12.ipynb
@@ -10058,13 +10058,11 @@
         "    model_2.train()\n",
         "    model_2.zero_grad()\n",
         "    logits = model_2(input_ids, input_ids)\n",
-        "    logits = torch.FloatTensor(logits)\n",
         "    logits = logits.reshape(-1, logits.shape[-1])\n",
         "    target_ids = target_ids.reshape(-1)\n",
-        "    target_ids = target_ids.long()\n",
         "    loss = nn.functional.cross_entropy(logits, target_ids, ignore_index=model_2.pad_token_id)\n",
         "    loss.backward()\n",
-        "    optimizer.step()\n",
+        "    optimizer2.step()\n",
         "\n",
         "    return loss.item()\n",
         "\n",
@@ -10072,10 +10070,8 @@
         "def validation_step(input_ids, target_ids):\n",
         "    model_2.eval()\n",
         "    logits = model_2(input_ids, input_ids)\n",
-        "    logits = torch.FloatTensor(logits)\n",
         "    logits = logits.reshape(-1, logits.shape[-1])\n",
         "    target_ids = target_ids.reshape(-1)\n",
-        "    target_ids = target_ids.long()\n",
         "    loss = nn.functional.cross_entropy(logits, target_ids, ignore_index=model_2.pad_token_id)\n",
         "    return loss.item()\n",
         "\n",
@@ -10106,24 +10102,77 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 373
+          "base_uri": "https://localhost:8080/"
         },
         "id": "iRjLAm1HbD-h",
-        "outputId": "1020fec4-9faf-42b0-b042-a5e4f9117aab"
+        "outputId": "c491ca31-132b-42e1-da50-02003a31915f"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-25-d531a494e631>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mn_examples\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mmax_examples\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtrain_input_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_target_ids\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_loader2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_input_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_target_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m         \u001b[0mtrain_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-25-d531a494e631>\u001b[0m in \u001b[0;36mtrain_step\u001b[0;34m(input_ids, target_ids)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mmodel_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mtarget_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtarget_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: expected TensorOptions(dtype=float, device=cpu, layout=Strided, requires_grad=false (default), pinned_memory=false (default), memory_format=(nullopt)) (got TensorOptions(dtype=float, device=cuda:0, layout=Strided, requires_grad=false (default), pinned_memory=false (default), memory_format=(nullopt)))"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 steps; 0 examples so far; train ppl: 30010.89, valid ppl: 29058.85\n",
+            "1000 steps; 128000 examples so far; train ppl: 701.44, valid ppl: 372.58\n",
+            "2000 steps; 256000 examples so far; train ppl: 239.98, valid ppl: 118.47\n",
+            "3000 steps; 384000 examples so far; train ppl: 22.68, valid ppl: 8.07\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = 'Bia é a primeira brasileira a vencer' #um torneio profissional na grama\n",
+        "max_output_tokens = 20\n",
+        "model_2.eval()\n",
+        "\n",
+        "for _ in range(max_output_tokens):\n",
+        "    input_ids = tokenize(text=prompt, tokenizer=tokenizer)\n",
+        "    input_ids_truncated = input_ids[-max_seq_length:]  # Usamos apenas os últimos <max_seq_length> tokens como entrada para o modelo.\n",
+        "    logits = model_2(torch.LongTensor([input_ids_truncated]).to(device), torch.LongTensor([input_ids_truncated]).to(device))\n",
+        "    logits = logits[:, -1, :]  # Usamos apenas o ultimo token da sequencia\n",
+        "    # Ao usarmos o argmax, a saída do modelo em cada passo é o token de maior probabilidade.\n",
+        "    # Isso se chama decodificação gulosa (greedy decoding).\n",
+        "    predicted_id = torch.argmax(logits).item()\n",
+        "    input_ids += [predicted_id]  # Concatenamos a entrada com o token escolhido nesse passo.\n",
+        "    prompt = tokenizer.decode(input_ids)\n",
+        "    print(prompt)"
+      ],
+      "metadata": {
+        "id": "7KsVzSkcJecJ",
+        "outputId": "27b5906c-7d43-460a-9faa-2467f621164b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[CLS] Bia é a primeira brasileira a vencer [SEP] [CLS]\n",
+            "[CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n",
+            "[CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] [CLS] Bia é a primeira brasileira a vencer [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS] [SEP] [CLS]\n"
           ]
         }
       ]
