--- a/projeto_final/fabio_mazza/projeto_final_modulos12.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulos12.ipynb
@@ -9840,7 +9840,72 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 steps; 0 examples so far; train ppl: 29969.16, valid ppl: 22933.96\n"
+            "0 steps; 0 examples so far; train ppl: 29969.16, valid ppl: 22933.96\n",
+            "1000 steps; 128000 examples so far; train ppl: 831.59, valid ppl: 498.35\n",
+            "2000 steps; 256000 examples so far; train ppl: 509.60, valid ppl: 397.97\n",
+            "3000 steps; 384000 examples so far; train ppl: 430.45, valid ppl: 345.27\n",
+            "4000 steps; 512000 examples so far; train ppl: 388.24, valid ppl: 317.66\n",
+            "5000 steps; 640000 examples so far; train ppl: 359.36, valid ppl: 300.55\n",
+            "6000 steps; 768000 examples so far; train ppl: 335.31, valid ppl: 282.80\n",
+            "7000 steps; 896000 examples so far; train ppl: 318.31, valid ppl: 268.98\n",
+            "8000 steps; 1024000 examples so far; train ppl: 303.66, valid ppl: 258.94\n",
+            "9000 steps; 1152000 examples so far; train ppl: 290.73, valid ppl: 249.43\n",
+            "10000 steps; 1280000 examples so far; train ppl: 278.64, valid ppl: 241.08\n",
+            "11000 steps; 1408000 examples so far; train ppl: 271.96, valid ppl: 235.08\n",
+            "12000 steps; 1536000 examples so far; train ppl: 263.46, valid ppl: 228.42\n",
+            "13000 steps; 1664000 examples so far; train ppl: 256.39, valid ppl: 223.66\n",
+            "14000 steps; 1792000 examples so far; train ppl: 249.63, valid ppl: 219.37\n",
+            "15000 steps; 1920000 examples so far; train ppl: 246.41, valid ppl: 215.67\n",
+            "16000 steps; 2048000 examples so far; train ppl: 232.42, valid ppl: 211.72\n",
+            "17000 steps; 2176000 examples so far; train ppl: 219.91, valid ppl: 208.95\n",
+            "18000 steps; 2304000 examples so far; train ppl: 217.41, valid ppl: 205.00\n",
+            "19000 steps; 2432000 examples so far; train ppl: 214.30, valid ppl: 202.21\n",
+            "20000 steps; 2560000 examples so far; train ppl: 212.47, valid ppl: 200.48\n",
+            "21000 steps; 2688000 examples so far; train ppl: 209.66, valid ppl: 197.86\n",
+            "22000 steps; 2816000 examples so far; train ppl: 207.81, valid ppl: 196.24\n",
+            "23000 steps; 2944000 examples so far; train ppl: 206.67, valid ppl: 193.04\n",
+            "24000 steps; 3072000 examples so far; train ppl: 204.67, valid ppl: 191.62\n",
+            "25000 steps; 3200000 examples so far; train ppl: 202.66, valid ppl: 188.67\n",
+            "26000 steps; 3328000 examples so far; train ppl: 201.98, valid ppl: 187.09\n",
+            "27000 steps; 3456000 examples so far; train ppl: 199.81, valid ppl: 185.26\n",
+            "28000 steps; 3584000 examples so far; train ppl: 198.73, valid ppl: 183.56\n",
+            "29000 steps; 3712000 examples so far; train ppl: 198.12, valid ppl: 183.95\n",
+            "30000 steps; 3840000 examples so far; train ppl: 195.33, valid ppl: 179.80\n",
+            "31000 steps; 3968000 examples so far; train ppl: 194.91, valid ppl: 179.15\n",
+            "32000 steps; 4096000 examples so far; train ppl: 180.38, valid ppl: 179.10\n",
+            "33000 steps; 4224000 examples so far; train ppl: 176.84, valid ppl: 177.12\n",
+            "34000 steps; 4352000 examples so far; train ppl: 177.47, valid ppl: 176.94\n",
+            "35000 steps; 4480000 examples so far; train ppl: 176.65, valid ppl: 177.18\n",
+            "36000 steps; 4608000 examples so far; train ppl: 176.10, valid ppl: 174.29\n",
+            "37000 steps; 4736000 examples so far; train ppl: 175.32, valid ppl: 174.30\n",
+            "38000 steps; 4864000 examples so far; train ppl: 175.11, valid ppl: 173.61\n",
+            "39000 steps; 4992000 examples so far; train ppl: 176.88, valid ppl: 173.40\n",
+            "40000 steps; 5120000 examples so far; train ppl: 174.55, valid ppl: 170.98\n",
+            "41000 steps; 5248000 examples so far; train ppl: 174.74, valid ppl: 170.65\n",
+            "42000 steps; 5376000 examples so far; train ppl: 174.23, valid ppl: 169.92\n",
+            "43000 steps; 5504000 examples so far; train ppl: 173.32, valid ppl: 167.72\n",
+            "44000 steps; 5632000 examples so far; train ppl: 172.62, valid ppl: 167.21\n",
+            "45000 steps; 5760000 examples so far; train ppl: 172.48, valid ppl: 166.40\n",
+            "46000 steps; 5888000 examples so far; train ppl: 171.68, valid ppl: 163.98\n",
+            "47000 steps; 6016000 examples so far; train ppl: 170.69, valid ppl: 166.20\n",
+            "48000 steps; 6144000 examples so far; train ppl: 160.29, valid ppl: 162.96\n",
+            "49000 steps; 6272000 examples so far; train ppl: 158.87, valid ppl: 164.50\n",
+            "50000 steps; 6400000 examples so far; train ppl: 159.48, valid ppl: 163.99\n",
+            "51000 steps; 6528000 examples so far; train ppl: 158.84, valid ppl: 164.62\n",
+            "52000 steps; 6656000 examples so far; train ppl: 159.72, valid ppl: 163.82\n",
+            "53000 steps; 6784000 examples so far; train ppl: 159.20, valid ppl: 162.77\n",
+            "54000 steps; 6912000 examples so far; train ppl: 159.64, valid ppl: 162.12\n",
+            "55000 steps; 7040000 examples so far; train ppl: 159.74, valid ppl: 160.79\n",
+            "56000 steps; 7168000 examples so far; train ppl: 159.66, valid ppl: 160.65\n",
+            "57000 steps; 7296000 examples so far; train ppl: 159.68, valid ppl: 159.79\n",
+            "58000 steps; 7424000 examples so far; train ppl: 159.12, valid ppl: 158.37\n",
+            "59000 steps; 7552000 examples so far; train ppl: 158.90, valid ppl: 158.97\n",
+            "60000 steps; 7680000 examples so far; train ppl: 158.93, valid ppl: 158.16\n",
+            "61000 steps; 7808000 examples so far; train ppl: 159.14, valid ppl: 156.88\n",
+            "62000 steps; 7936000 examples so far; train ppl: 158.85, valid ppl: 156.00\n",
+            "63000 steps; 8064000 examples so far; train ppl: 150.78, valid ppl: 155.53\n",
+            "64000 steps; 8192000 examples so far; train ppl: 148.58, valid ppl: 156.90\n",
+            "65000 steps; 8320000 examples so far; train ppl: 149.34, valid ppl: 156.62\n"
           ]
         }
       ]
