--- a/projeto_final/fabio_mazza/projeto_final_modulos12_integra.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulos12_integra.ipynb
@@ -1638,18 +1638,24 @@
         "\n",
         "        self.classifier = nn.Sequential(\n",
         "            nn.Dropout(p=0.20),\n",
-        "            nn.Linear(in_features=512, out_features=256),\n",
+        "            nn.Linear(in_features=512, out_features=1024), ### 3072 = max_seq_len = 12 x embedding_dim(d_model) = 256\n",
         "            nn.Dropout(p=0.20),\n",
-        "            nn.Linear(in_features=256, out_features=num_cats),\n",
+        "            nn.Linear(in_features=1024, out_features=3072),\n",
+        "        ).to(device)\n",
+        "\n",
+        "        self.output_layer = nn.Sequential(\n",
+        "            nn.Dropout(p=0.20),\n",
+        "            nn.Linear(in_features=3072, out_features=num_cats)\n",
         "            ##nn.Sigmoid() - included in BCEWithLogitsLoss\n",
         "        ).to(device)\n",
         "    \n",
         "    def forward(self, input):\n",
         "        y_hat = self.model_1_wo_fc(input)\n",
         "        y_hat = torch.flatten(y_hat, 1)\n",
-        "        y_hat = self.classifier(y_hat)\n",
+        "        features = self.classifier(y_hat)\n",
+        "        output = self.output_layer(features)\n",
         "\n",
-        "        return y_hat"
+        "        return output, features"
       ],
       "metadata": {
         "id": "cKV8f2zbhRiB"
@@ -1708,18 +1714,17 @@
         "    \n",
         "    def forward(self, input_en, input_de):\n",
         "        \n",
-        "        #Pad Masks\n",
+        "        #Pad Mask\n",
         "        decoder_pad_mask = input_de == self.pad_token_id\n",
         "        decoder_pad_mask.to(device)\n",
-        "        \n",
         "        #Decoder\n",
         "        Y_de = self.embedding_decoder(input_de)\n",
         "        Y_de = Y_de + self.positional_decoder\n",
         "\n",
         "        #Encoder\n",
-        "        X_en = torch.zeros((input_en.shape[0], self.max_seq_length, self.d_model), device=device) ###### For now, change when encoder is used\n",
-        "        \n",
-        "        \n",
+        "        X_en = input_en.reshape(input_de.shape[0], self.max_seq_length, self.d_model)\n",
+        "        #X_en = torch.zeros((input_en.shape[0], self.max_seq_length, self.d_model), device=device) ###### Used when encoder is zero\n",
+        "                \n",
         "        output_decoder = self.transformer(src=X_en, tgt=Y_de, tgt_mask=self.tgt_mask, tgt_key_padding_mask=decoder_pad_mask)\n",
         "        \n",
         "        output = self.linear(output_decoder)\n",
@@ -1740,6 +1745,35 @@
       "metadata": {
         "id": "6NrGpwu42ekf"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_examples = 250_000\n",
+        "eval_every_steps = 100\n",
+        "lr = 3e-4\n",
+        "\n",
+        "vocab_size = tokenizer.vocab_size\n",
+        "embedding_dim = 256\n",
+        "nhead = 4\n",
+        "num_encoder_layers = 4\n",
+        "num_decoder_layers = 4\n",
+        "dim_feedforward = 1024\n",
+        "n_linear = 1024\n",
+        "\n",
+        "model_1 = MultiLabelClassifier(num_cats=num_cats).to(device)\n",
+        "\n",
+        "model_2 = LanguageModel(vocab_size, max_seq_length, embedding_dim, nhead, \n",
+        "                 num_encoder_layers, num_decoder_layers, dim_feedforward, n_linear).to(device)\n",
+        "\n",
+        "train_loader1 = DataLoader(train_dataset1, batch_size=64, shuffle=True, drop_last=True)\n",
+        "validation_loader1 = DataLoader(valid_dataset1, batch_size=64)\n"
+      ],
+      "metadata": {
+        "id": "aNATX8wRzHLu"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
