--- a/projeto_final/fabio_mazza/projeto_final_modulos12_integra.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulos12_integra.ipynb
@@ -1766,8 +1766,85 @@
         "model_2 = LanguageModel(vocab_size, max_seq_length, embedding_dim, nhead, \n",
         "                 num_encoder_layers, num_decoder_layers, dim_feedforward, n_linear).to(device)\n",
         "\n",
-        "train_loader1 = DataLoader(train_dataset1, batch_size=64, shuffle=True, drop_last=True)\n",
-        "validation_loader1 = DataLoader(valid_dataset1, batch_size=64)\n"
+        "train_loader1 = DataLoader(train_dataset1, batch_size=128, shuffle=True, drop_last=True)\n",
+        "validation_loader1 = DataLoader(valid_dataset1, batch_size=128)\n",
+        "\n",
+        "train_loader2 = DataLoader(train_dataset2, batch_size=128, shuffle=True, drop_last=True)\n",
+        "validation_loader2 = DataLoader(valid_dataset2, batch_size=128)\n",
+        "\n",
+        "optimizer = torch.optim.Adam(list(model_1.parameters()) + list(model_2.parameters()), lr=lr)\n",
+        "\n",
+        "def train_step(inputs1, targets1, inputs2_de, targets2):\n",
+        "    model_1.train()\n",
+        "    model_2.train()\n",
+        "    model_1.zero_grad()\n",
+        "    model_2.zero_grad()\n",
+        "\n",
+        "    # Model #1\n",
+        "    outputs1, inputs2_en = model_1(inputs1) #inputs2_en will be fed to the encoder of model #2\n",
+        "    criterion1 = nn.BCEWithLogitsLoss()\n",
+        "    loss1 = criterion1(outputs1, targets1)\n",
+        "\n",
+        "    # Model #2\n",
+        "    logits = model_2(inputs2_en, inputs2_de)\n",
+        "    logits = logits.reshape(-1, logits.shape[-1])\n",
+        "    targets2 = targets2.reshape(-1)\n",
+        "    loss2 = nn.functional.cross_entropy(logits, targets2, ignore_index=model_2.pad_token_id)\n",
+        "\n",
+        "    # Combined loss and optimization\n",
+        "    loss = loss1 + loss2\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    return loss.item()\n",
+        "\n",
+        "\n",
+        "def validation_step(inputs1, targets1, inputs2_de, targets2):\n",
+        "    model_1.eval()\n",
+        "    model_2.eval()\n",
+        "    \n",
+        "    # Model #1\n",
+        "    outputs1, inputs2_en = model_1(inputs1) #inputs2_en will be fed to the encoder of model #2\n",
+        "    criterion1 = nn.BCEWithLogitsLoss()\n",
+        "    loss1 = criterion1(outputs1, targets1)\n",
+        "\n",
+        "    # Model #2\n",
+        "    logits = model_2(inputs2_en, inputs2_de)\n",
+        "    logits = logits.reshape(-1, logits.shape[-1])\n",
+        "    targets2 = targets2.reshape(-1)\n",
+        "    loss2 = nn.functional.cross_entropy(logits, targets2, ignore_index=model_2.pad_token_id)\n",
+        "    \n",
+        "    # Combined loss\n",
+        "    loss = loss1 + loss2\n",
+        "\n",
+        "    return loss.item()\n",
+        "\n",
+        "train_losses = []\n",
+        "n_examples = 0\n",
+        "step = 0\n",
+        "\n",
+        "while n_examples < max_examples:\n",
+        "    for (train_inputs1, train_targets1), (train_inputs2, train_targets2) in zip(train_loader1, train_loader2): #### ????????\n",
+        "        loss = train_step(train_inputs1.to(device), train_targets1.to(device), train_inputs2.to(device), train_targets2.to(device)) \n",
+        "        train_losses.append(loss)\n",
+        "        \n",
+        "        if step % eval_every_steps == 0:\n",
+        "            train_loss = np.average(train_losses)\n",
+        "\n",
+        "            with torch.no_grad():\n",
+        "                valid_loss = np.average([\n",
+        "                    validation_step(val_inputs1.to(device), val_targets1.to(device), val_inputs2.to(device), val_targets2.to(device))\n",
+        "                    for (val_inputs1, val_targets1), (val_inputs2, val_targets2) in zip(val_loader1, val_loader2)])\n",
+        "\n",
+        "            print(f'{step} steps; {n_examples} examples so far; train loss: {train_loss:.6f}, valid loss: {valid_loss:.6f}')\n",
+        "            train_losses = []\n",
+        "\n",
+        "        wandb.log({'train loss:': train_loss, 'valid loss:': valid_loss})\n",
+        "\n",
+        "        n_examples += len(train_inputs1)  # Increment of batch size\n",
+        "        step += 1\n",
+        "        if n_examples >= max_examples:\n",
+        "            break\n"
       ],
       "metadata": {
         "id": "aNATX8wRzHLu"
@@ -1776,204 +1853,9 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "max_examples = 10_000_000\n",
-        "eval_every_steps = 1000\n",
-        "lr = 6e-4\n",
-        "\n",
-        "vocab_size = tokenizer.vocab_size\n",
-        "embedding_dim = 256\n",
-        "nhead = 4\n",
-        "num_encoder_layers = 4\n",
-        "num_decoder_layers = 4\n",
-        "dim_feedforward = 1024\n",
-        "n_linear = 1024\n",
-        "\n",
-        "model_2 = LanguageModel(vocab_size, max_seq_length, embedding_dim, nhead, \n",
-        "                 num_encoder_layers, num_decoder_layers, dim_feedforward, n_linear).to(device)\n",
-        "\n",
-        "train_loader2 = DataLoader(train_dataset2, batch_size=128, shuffle=True, drop_last=True)\n",
-        "validation_loader2 = DataLoader(valid_dataset2, batch_size=128)\n",
-        "\n",
-        "optimizer2 = torch.optim.Adam(model_2.parameters(), lr=lr)\n",
-        "\n",
-        "def train_step(input_ids, target_ids):\n",
-        "    model_2.train()\n",
-        "    model_2.zero_grad()\n",
-        "    logits = model_2(input_ids, input_ids)\n",
-        "    logits = logits.reshape(-1, logits.shape[-1])\n",
-        "    target_ids = target_ids.reshape(-1)\n",
-        "    loss = nn.functional.cross_entropy(logits, target_ids, ignore_index=model_2.pad_token_id)\n",
-        "    loss.backward()\n",
-        "    optimizer2.step()\n",
-        "\n",
-        "    return loss.item()\n",
-        "\n",
-        "\n",
-        "def validation_step(input_ids, target_ids):\n",
-        "    model_2.eval()\n",
-        "    logits = model_2(input_ids, input_ids)\n",
-        "    logits = logits.reshape(-1, logits.shape[-1])\n",
-        "    target_ids = target_ids.reshape(-1)\n",
-        "    loss = nn.functional.cross_entropy(logits, target_ids, ignore_index=model_2.pad_token_id)\n",
-        "    return loss.item()\n",
-        "\n",
-        "\n",
-        "train_losses = []\n",
-        "n_examples = 0\n",
-        "step = 0\n",
-        "while n_examples < max_examples:\n",
-        "    for train_input_ids, train_target_ids in train_loader2:\n",
-        "        loss = train_step(train_input_ids.to(device), train_target_ids.to(device)) \n",
-        "        train_losses.append(loss)\n",
-        "        \n",
-        "        if step % eval_every_steps == 0:\n",
-        "            train_ppl = np.exp(np.average(train_losses))\n",
-        "\n",
-        "            with torch.no_grad():\n",
-        "                valid_ppl = np.exp(np.average([\n",
-        "                    validation_step(val_input_ids.to(device), val_target_ids.to(device))\n",
-        "                    for val_input_ids, val_target_ids in validation_loader2]))\n",
-        "\n",
-        "            print(f'{step} steps; {n_examples} examples so far; train ppl: {train_ppl:.2f}, valid ppl: {valid_ppl:.2f}')\n",
-        "            train_losses = []\n",
-        "\n",
-        "        wandb.log({'train ppl:': train_ppl, 'valid ppl:': valid_ppl})\n",
-        "\n",
-        "        n_examples += len(train_input_ids)  # Increment of batch size\n",
-        "        step += 1\n",
-        "        if n_examples >= max_examples:\n",
-        "            break"
-      ],
-      "metadata": {
-        "id": "iRjLAm1HbD-h"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "5ZLVhOJ8dKx4"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "max_examples = 250_000\n",
-        "eval_every_steps = 100\n",
-        "lr = 1e-4\n",
-        "\n",
-        "model_1 = MultiLabelClassifier(num_cats=num_cats)\n",
-        "\n",
-        "train_loader1 = DataLoader(train_dataset1, batch_size=64, shuffle=True, drop_last=True)\n",
-        "validation_loader1 = DataLoader(valid_dataset1, batch_size=64)\n",
-        "\n",
-        "optimizer1 = torch.optim.Adam(model_1.parameters(), lr=lr)\n",
-        "\n",
-        "def train_step(inputs, targets):\n",
-        "    model_1.train()\n",
-        "    model_1.zero_grad()\n",
-        "    outputs1 = model_1(inputs)\n",
-        "    #outputs = logits.reshape(-1, logits.shape[-1])\n",
-        "    #target_ids = target_ids.reshape(-1)\n",
-        "    criterion1 = nn.BCEWithLogitsLoss()\n",
-        "    loss1 = criterion1(outputs1, targets1)\n",
-        "\n",
-        "    optimizer1.step()\n",
-        "\n",
-        "    #loss.backward()\n",
-        "    return loss.item()\n",
-        "\n",
-        "\n",
-        "def validation_step(inputs, targets):\n",
-        "    model_1.eval()\n",
-        "    outputs = model_1(inputs)\n",
-        "    #logits = logits.reshape(-1, logits.shape[-1])\n",
-        "    #target_ids = target_ids.reshape(-1)\n",
-        "    criterion = nn.BCEWithLogitsLoss()\n",
-        "    loss = criterion(outputs, targets)\n",
-        "    return loss.item()\n",
-        "\n",
-        "def f1_score(inputs, targets, threshold=0.35):\n",
-        "    model_1.eval()\n",
-        "    sigmoid = torch.nn.Sigmoid()\n",
-        "    outputs = sigmoid(model_1(inputs))\n",
-        "    outputs[outputs >= threshold] = 1.0\n",
-        "    outputs[outputs < threshold] = 0.0\n",
-        "    \n",
-        "    n_true_positives = (outputs.bool() & targets.bool()).sum().item()\n",
-        "    n_false_positives = ((outputs.bool() ^ targets.bool()) & outputs.bool()).sum().item()\n",
-        "    n_false_negatives = ((outputs.bool() ^ targets.bool()) & targets.bool()).sum().item()\n",
-        "\n",
-        "    precision = n_true_positives / (n_true_positives + n_false_positives)\n",
-        "    recall = n_true_positives / (n_true_positives + n_false_negatives)\n",
-        "    f1_score = (2 * precision * recall) / (precision + recall)\n",
-        "\n",
-        "    return f1_score\n",
-        "\n",
-        "train_losses = []\n",
-        "n_examples = 0\n",
-        "step = 0\n",
-        "while n_examples < max_examples:\n",
-        "    for train_input, train_target in train_loader:\n",
-        "        loss = train_step(train_input.to(device), train_target.to(device)) \n",
-        "        train_losses.append(loss)\n",
-        "        \n",
-        "        if step % eval_every_steps == 0:\n",
-        "            train_loss = np.average(train_losses)\n",
-        "\n",
-        "            with torch.no_grad():\n",
-        "                valid_loss = np.average([\n",
-        "                    validation_step(val_input.to(device), val_target.to(device))\n",
-        "                    for val_input, val_target in validation_loader])\n",
-        "                \n",
-        "                valid_f1_score = np.average([\n",
-        "                    f1_score(val_input.to(device), val_target.to(device))\n",
-        "                    for val_input, val_target in validation_loader])\n",
-        "                \n",
-        "                wandb.log({'train loss:': train_loss, 'valid loss': valid_loss, 'valid_f1_score': valid_f1_score})\n",
-        "\n",
-        "            print(f'{step} steps; {n_examples} examples so far; train loss: {train_loss:.6f}, valid loss: {valid_loss:.6f}, valid f1_score: {valid_f1_score:.6f}')\n",
-        "            train_losses = []\n",
-        "\n",
-        "        n_examples += len(train_input)  # Increment of batch size\n",
-        "        step += 1\n",
-        "        if n_examples >= max_examples:\n",
-        "            break"
-      ],
-      "metadata": {
-        "id": "MW_63B7L2d1N"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#Avaliação do módulo 1 (model_1) no dataset de teste"
-      ],
-      "metadata": {
-        "id": "m4N0cH8iAFBl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#Teste do Modelo - Módulo 1"
-      ],
-      "metadata": {
-        "id": "RQ0kgyaR0uyw"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Teste modelo 2"
+        "# TESTE"
       ],
       "metadata": {
         "id": "zJ7TSlqLd3Pu"
